crates/analyzer/tests/snapshots/errors__bad_string.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: type mismatch
  ┌─ compile_errors/bad_string.fe:3:28
  │
3 │         let s: String<1> = "Fe"
  │                            ^^^^ this has type `String<2>`; expected type `String<1>`


